Refactor Schema
